[gd_scene load_steps=15 format=3 uid="uid://c5sj63hfcnuu"]

[ext_resource type="PackedScene" uid="uid://hdo0x3lbpndx" path="res://assets/field/2019-DeepSpace/gltf/2019 field - CargoShip.gltf" id="1_ve2pj"]
[ext_resource type="Script" uid="uid://cr7meb3vllwh2" path="res://assets/field/2019-DeepSpace/scenes/cargo_ship.gd" id="2_kr3v0"]
[ext_resource type="Script" uid="uid://cec3qgbpk5wt8" path="res://hatch_attachment.gd" id="2_twy33"]
[ext_resource type="Texture2D" uid="uid://c3s115qaiv23c" path="res://assets/field/2019-DeepSpace/materials/ge-19082-right-red.png" id="2_yw2e3"]
[ext_resource type="Texture2D" uid="uid://dh80pdxw7u5ij" path="res://assets/field/2019-DeepSpace/materials/ge-19082-left-red.png" id="3_qt7cm"]
[ext_resource type="Material" uid="uid://bx4cfjwjfe488" path="res://assets/field/2019-DeepSpace/materials/red.tres" id="3_seigu"]
[ext_resource type="Script" uid="uid://cgjggq5m5jbll" path="res://assets/field/2019-DeepSpace/scenes/score_areas.gd" id="3_twy33"]
[ext_resource type="Texture2D" uid="uid://bk6ryqulg5t4c" path="res://assets/field/2019-DeepSpace/materials/ge-19079-left-red.png" id="4_qt7cm"]
[ext_resource type="Texture2D" uid="uid://d75wll2ugooe" path="res://assets/field/2019-DeepSpace/materials/ge-19080-right-red.png" id="5_06e83"]
[ext_resource type="Texture2D" uid="uid://bvn85ta1xixxm" path="res://assets/field/2019-DeepSpace/materials/ge-19080-left-red.png" id="6_kr3v0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_vishe"]
size = Vector3(0.0216599, 0.306641, 1.36549)

[sub_resource type="BoxShape3D" id="BoxShape3D_seigu"]
size = Vector3(1.15125, 0.334473, 2.47455)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_p804u"]
height = 0.055542
radius = 0.0302734

[sub_resource type="BoxShape3D" id="BoxShape3D_p804u"]
size = Vector3(0.0964661, 0.048584, 0.0210571)

[node name="CargoShip" instance=ExtResource("1_ve2pj")]
script = ExtResource("2_kr3v0")

[node name="CargoShip" parent="." index="0"]
surface_material_override/3 = ExtResource("3_seigu")

[node name="StaticBody3D" parent="CargoShip" index="0"]
visible = false

[node name="wingRight" type="Sprite3D" parent="CargoShip" index="1"]
transform = Transform3D(-3.79662e-09, 0, -0.0828659, 0, 0.0828659, 0, 0.0868566, 0, -3.62218e-09, -0.005, 1.346, 0.785)
texture = ExtResource("2_yw2e3")
metadata/_edit_group_ = true

[node name="wingLeft" type="Sprite3D" parent="CargoShip" index="2"]
transform = Transform3D(-3.79662e-09, 0, 0.0828659, 0, 0.0828659, 0, -0.0868566, 0, -3.62218e-09, 0.005, 1.346, 0.785)
texture = ExtResource("3_qt7cm")
metadata/_edit_group_ = true

[node name="lowerRight" type="Sprite3D" parent="CargoShip" index="3"]
transform = Transform3D(0.0033585, 9.11247e-11, -0.0203157, -2.70705e-12, 0.0205914, 9.1914e-11, 0.0203157, -1.23205e-11, 0.0033585, -0.645459, 0.501838, 2.29054)
texture = ExtResource("4_qt7cm")
metadata/_edit_group_ = true

[node name="lowerLeft" type="Sprite3D" parent="CargoShip" index="4"]
transform = Transform3D(0.00336311, 0, 0.0203149, 0, 0.0205914, 0, -0.0203149, 0, 0.00336311, 0.645, 0.502, 2.291)
texture = ExtResource("4_qt7cm")
metadata/_edit_group_ = true

[node name="midRight" type="Sprite3D" parent="CargoShip" index="5"]
transform = Transform3D(0.00688679, 0.0273714, -0.0283439, -2.29239e-10, 0.0287736, 0.0277863, 0.0394027, -0.00478397, 0.00495394, -0.470316, 1.00274, 2.24097)
pixel_size = 0.005
texture = ExtResource("5_06e83")

[node name="midLeft" type="Sprite3D" parent="CargoShip" index="6"]
transform = Transform3D(0.00687716, -0.0273726, 0.0283451, 0, 0.0287736, 0.0277863, -0.0394044, -0.00477728, 0.00494702, 0.47, 1.003, 2.241)
pixel_size = 0.005
texture = ExtResource("6_kr3v0")

[node name="AutoCargoHold" type="StaticBody3D" parent="." index="1"]
collision_layer = 32
collision_mask = 32

[node name="Left" type="CollisionShape3D" parent="AutoCargoHold" index="0"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.494298, 0.52714, 1.03863)
shape = SubResource("BoxShape3D_vishe")

[node name="right" type="CollisionShape3D" parent="AutoCargoHold" index="1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.524184, 0.545092, 1.05634)
shape = SubResource("BoxShape3D_vishe")

[node name="front" type="CollisionShape3D" parent="AutoCargoHold" index="2"]
transform = Transform3D(-4.37114e-08, 0, -1, -1, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, 1.91069e-15, -0.0122384, 0.531903, 2.47571)
shape = SubResource("BoxShape3D_vishe")

[node name="StaticBody3D" type="StaticBody3D" parent="." index="2"]
collision_layer = 16
collision_mask = 16

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="StaticBody3D" index="0"]
transform = Transform3D(-1, 8.74228e-08, 3.82137e-15, 0, -4.37114e-08, 1, 8.74228e-08, 1, 4.37114e-08, 0, 0.501779, 0)
depth = 0.6
polygon = PackedVector2Array(0.72, -0.01, 0.72, 1.925, 0.59, 2.675, -0.59, 2.675, -0.72, 1.925, -0.72, -0.01)

[node name="CollisionShape3D" type="CollisionShape3D" parent="StaticBody3D" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00579834, 0.165971, 1.24893)
shape = SubResource("BoxShape3D_seigu")

[node name="CollisionPolygon3D2" type="CollisionPolygon3D" parent="StaticBody3D" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.999764)
depth = 2.0
polygon = PackedVector2Array(0.708926, 0.802824, -0.706726, 0.802824, -0.293062, 1.21955, 0.295261, 1.21955)

[node name="Bay3Right" type="Area3D" parent="." index="3"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.72, 0.48534, 0.494948)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay3Right" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="Bay2Right" type="Area3D" parent="." index="4"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.72, 0.48534, 1.05363)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay2Right" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="Bay1Right" type="Area3D" parent="." index="5"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.72, 0.48534, 1.62086)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay1Right" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="BayFrontRight" type="Area3D" parent="." index="6"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.284036, 0.48534, 2.68373)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BayFrontRight" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="BayFrontLeft" type="Area3D" parent="." index="7"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -0.282917, 0.48534, 2.68373)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="BayFrontLeft" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="Bay1Left" type="Area3D" parent="." index="8"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.72, 0.48534, 1.62338)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay1Left" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="Bay2Left" type="Area3D" parent="." index="9"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.72, 0.48534, 1.05399)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay2Left" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="Bay3Left" type="Area3D" parent="." index="10"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.72, 0.48534, 0.499251)
collision_layer = 0
collision_mask = 192
monitorable = false
script = ExtResource("2_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bay3Left" index="0"]
transform = Transform3D(1.91069e-15, -4.37114e-08, -1, -1, -4.37114e-08, 0, -4.37114e-08, 1, -4.37114e-08, 0, 0, 0)
shape = SubResource("CylinderShape3D_p804u")
debug_color = Color(0.794408, 0.0689726, 1, 0.42)

[node name="ScoreAreas" type="Area3D" parent="." index="11"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.280605, 0.485508, 2.59275)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas2" type="Area3D" parent="." index="12"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.285081, 0.485508, 2.59275)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas2" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas3" type="Area3D" parent="." index="13"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.60502, 0.485508, 1.61961)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas3" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas4" type="Area3D" parent="." index="14"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.60502, 0.485508, 1.0533)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas4" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas5" type="Area3D" parent="." index="15"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.60502, 0.485508, 0.486994)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas5" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas6" type="Area3D" parent="." index="16"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.64142, 0.485508, 1.61961)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas6" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas7" type="Area3D" parent="." index="17"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.64142, 0.485508, 1.0533)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas7" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)

[node name="ScoreAreas8" type="Area3D" parent="." index="18"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.64142, 0.485508, 0.486994)
collision_layer = 0
collision_mask = 64
script = ExtResource("3_twy33")

[node name="CollisionShape3D" type="CollisionShape3D" parent="ScoreAreas8" index="0"]
shape = SubResource("BoxShape3D_p804u")
debug_color = Color(0.254272, 0.634906, 0, 0.42)
